--- a/fms-frontend/.env
+++ b/fms-frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=https://rps.flightmanagementsystem.com
+VITE_API_URL=https://flightmanagementsystem-latest.onrender.com/
 # Commented out for local testing - uncomment for production
